--- a/index.html
+++ b/index.html
@@ -206,19 +206,19 @@
           </div>
 
           <div class="work__projects">
-              <a href="https://github.com/donggeonL" class="project" target="blank">
-                  <img src="sat.png" alt="NMT">
+              <a href="https://github.com/donggeonL/Backend-Project" class="project" target="blank">
+                  <img src="NMT Project.PNG" alt="NMT">
                   <div class="project__description">
-                      <h3>NMT Site</h3>
+                      <h3>NMT Project</h3>
                       <span>Back-End Module project with spring boot</span>
                   </div>
               </a>
 
-              <a href="https://github.com/donggeonL" class="project" target="blank">
-                  <img src="sat.png" alt="NMT">
+              <a href="https://github.com/donggeonL/portfolio" class="project" target="blank">
+                  <img src="MyPortfolio.PNG" alt="Portfolio">
                   <div class="project__description">
-                      <h3>NMT Site</h3>
-                      <span>Back-End Module project with spring boot</span>
+                      <h3>My Portfolio Project</h3>
+                      <span>Front-End Module project with AWS, VSCode</span>
                   </div>
               </a>
           </div>
