--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- Home -->
         <section id="home">
             <img
-            src="psd.jpg"
+            src="dong.jpg"
             alt="Donggeon`s profile photo"
             class="home__avatar"
             />
@@ -117,38 +117,34 @@
             <div class="skill">
               <div class="skill__description">
                 <span>HTML</span>
-                <span>70%</span>
               </div>
               <div class="skill__bar">
-                <div class="skill__value" style="width: 70%"></div>
+                <div class="skill__value" style="width: 100%"></div>
               </div>
             </div>
             <div class="skill">
               <div class="skill__description">
                 <span>CSS</span>
-                <span>70%</span>
               </div>
               <div class="skill__bar">
-                <div class="skill__value" style="width: 70%"></div>
+                <div class="skill__value" style="width: 100%"></div>
               </div>
             </div>
             <div class="skill">
               <div class="skill__description">
                 <span>JavaScript</span>
-                <span>25%</span>
               </div>
               <div class="skill__bar">
-                <div class="skill__value" style="width: 25%"></div>
+                <div class="skill__value" style="width: 100%"></div>
               </div>
             </div>
 
             <div class="skill">
               <div class="skill__description">
-                <span>NodeJS</span>
-                <span>10%</span>
+                <span>React</span>
               </div>
               <div class="skill__bar">
-                <div class="skill__value" style="width: 10%"></div>
+                <div class="skill__value" style="width: 100%"></div>
               </div>
             </div>
 
@@ -156,10 +152,9 @@
             <div class="skill">
               <div class="skill__description">
                 <span>SpringBoot</span>
-                <span>35%</span>
               </div>
               <div class="skill__bar">
-                <div class="skill__value" style="width: 35%"></div>
+                <div class="skill__value" style="width: 100%"></div>
               </div>
             </div>
           </div>
@@ -181,6 +176,7 @@
                 <li><span>Github</span></li>
                 <li><span>Notion</span></li>
                 <li><span>Miro</span></li>
+                <li><span>Slack</span></li>
               </ul>
             </div>
           </div>
