--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   </div>
                   <h2 class="major__title">Front-End</h2>
                   <div class="major__description">
-                      HTML, CSS, JavaScript
+                      HTML, CSS, JavaScript, React.JS
                   </div>
               </div>
 
@@ -73,7 +73,7 @@
                   </div>
                   <h2 class="major__title">Back-End</h2>
                   <div class="major__description">
-                      SpringBoot, Node.js
+                      SpringBoot
                   </div>
               </div>
 
@@ -167,6 +167,7 @@
                 <li><span>Visual Studio Code</span></li>
                 <li><span>SpringBoot</span></li>
                 <li><span>Eclipse</span></li>
+                <li><span>IntelliJ</span></li>
               </ul>
             </div>
             <div class="etc">
@@ -174,7 +175,6 @@
               <ul class="etc__list">
                 <li><span>Git</span></li>
                 <li><span>Github</span></li>
-                <li><span>Notion</span></li>
                 <li><span>Miro</span></li>
                 <li><span>Slack</span></li>
               </ul>
