--- a/index.html
+++ b/index.html
@@ -217,6 +217,22 @@
                       <span>Front-End Module project with AWS, VSCode</span>
                   </div>
               </a>
+            
+              <a href="https://github.com/donggeonL/EduKids_project" class="project" target="blank">
+                  <img src="MyPortfolio.PNG" alt="Portfolio">
+                  <div class="project__description">
+                      <h3>My Portfolio Project</h3>
+                      <span>HTML,CSS,JavaScript-유아용 게임 사이트</span>
+                  </div>
+              </a>
+            
+              <a href="https://github.com/earlyadopterproject/untactgallery_project/tree/main" class="project" target="blank">
+                  <img src="MyPortfolio.PNG" alt="Portfolio">
+                  <div class="project__description">
+                      <h3>My Portfolio Project</h3>
+                      <span>SpringBoot, React 언택트 갤러리 사이트</span>
+                  </div>
+              </a>
           </div>
 
       </section>
