--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
               </a>
             
               <a href="https://github.com/donggeonL/EduKids_project" class="project" target="blank">
-                  <img src="MyPortfolio.PNG" alt="Portfolio">
+                  <img src="edukids.JPG" alt="Portfolio">
                   <div class="project__description">
                       <h3>EduKids Project</h3>
                       <span>HTML,CSS,JavaScript-유아용 게임 사이트</span>
@@ -227,7 +227,7 @@
               </a>
             
               <a href="https://github.com/earlyadopterproject/untactgallery_project/tree/main" class="project" target="blank">
-                  <img src="MyPortfolio.PNG" alt="Portfolio">
+                  <img src="untact.JPG" alt="Portfolio">
                   <div class="project__description">
                       <h3>My UntactGallery Project</h3>
                       <span>SpringBoot, React 언택트 갤러리 사이트</span>
