--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
           <div class="work__projects">
               <a href="https://github.com/donggeonL/Backend-Project" class="project" target="blank">
-                  <img src="NMT Project.PNG" alt="NMT">
+                  <img class="img_style" src="NMT Project.PNG" alt="NMT">
                   <div class="project__description">
                       <h3>NMT Project</h3>
                       <span>Back-End Module project with spring boot</span>
@@ -211,7 +211,7 @@
               </a>
 
               <a href="https://github.com/donggeonL/portfolio" class="project" target="blank">
-                  <img src="MyPortfolio.PNG" alt="Portfolio">
+                  <img class="img_style" src="MyPortfolio.PNG" alt="Portfolio">
                   <div class="project__description">
                       <h3>My Portfolio Project</h3>
                       <span>Front-End Module project with AWS, VSCode</span>
@@ -219,7 +219,7 @@
               </a>
             
               <a href="https://github.com/donggeonL/EduKids_project" class="project" target="blank">
-                  <img src="edukids.JPG" alt="Portfolio">
+                  <img class="img_style" src="edukids.JPG" alt="Portfolio">
                   <div class="project__description">
                       <h3>EduKids Project</h3>
                       <span>HTML,CSS,JavaScript-유아용 게임 사이트</span>
@@ -227,7 +227,7 @@
               </a>
             
               <a href="https://github.com/earlyadopterproject/untactgallery_project/tree/main" class="project" target="blank">
-                  <img src="untact.JPG" alt="Portfolio">
+                  <img class="img_style" src="untact.JPG" alt="Portfolio">
                   <div class="project__description">
                       <h3>My UntactGallery Project</h3>
                       <span>SpringBoot, React 언택트 갤러리 사이트</span>
