--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
               </a>
             
               <a href="https://github.com/donggeonL/PCR_Hospital_SpringBoot" class="project" target="blank">
-                  <img class="img_style" src="pcr-image.JPG" alt="pcr">
+                  <img class="img_style" src="project1.JPG" alt="pcr">
                   <div class="project__description">
                       <h3>PCR 검사 병원 조회 프로젝트</h3>
                       <span>SpringBoot,Mustache,JavaScript PCR 검사 병원 조회 사이트</span>
