--- a/index.html
+++ b/index.html
@@ -247,6 +247,14 @@
             </div>
         </a>
 
+        <a href="https://github.com/donggeonL/SpringBoot_ChattingSite" class="project" target="blank">
+            <img class="img_style" src="project6.JPG" alt="pcr">
+            <div class="project__description">
+                <h3>Online Chatting 사이트 프로젝트</h3>
+                <span>SpringBoot,HTML,CSS,JavaScript 채팅 사이트</span>
+            </div>
+        </a>
+
     </div>
 
 </section>
