add Product-seller site

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <h3>Projects</h3>
     <div class="work__categories">
         <button class="category__btn">
-            All<span class="category__count">5</span>
+            All<span class="category__count">7</span>
         </button>
 
         <button class="category__btn">
@@ -202,7 +202,7 @@
         </button>
 
         <button class="category__btn">
-            Full-Stack<span class="category__count">3</span>
+            Full-Stack<span class="category__count">5</span>
         </button>
     </div>
 
@@ -252,6 +252,14 @@
             <div class="project__description">
                 <h3>Online Chatting 사이트 프로젝트</h3>
                 <span>SpringBoot,HTML,CSS,JavaScript 채팅 사이트</span>
+            </div>
+        </a>
+
+        <a href="https://github.com/donggeonL/product-sell-website-react" class="project" target="blank">
+            <img class="img_style" src="project7.JPG" alt="pcr">
+            <div class="project__description">
+                <h3>물품 판매 사이트 프로젝트</h3>
+                <span>SpringBoot,HTML,CSS,JavaScript,ReactJS를 사용한 Product-Seller Site</span>
             </div>
         </a>
 
